--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,7 +5,6 @@ version = "0.0.1"
 authors = ["carlos rojas"]
 
 [dependencies]
-uuid="*"
 serde_json="1.0"
 serde_derive="1.0"
 serde="1.0"
@@ -14,3 +13,7 @@ zmq="0.8.2"
 [dependencies.postgres]
 version="0.15"
 features=["with-uuid", "with-serde_json"]
+
+[dependencies.uuid]
+version="*"
+features=["serde"]
